# vokel

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: app.hpp  commands.hpp  config.hpp  device.hpp  engine.hpp  framebuffer.hpp  instance.hpp  logging.hpp  memory.hpp  mesh.hpp  pipeline.hpp  render_structs.hpp  scene.hpp  shaders.hpp  swapchain.hpp  sync.hpp  triangle_mesh.hpp  window.hpp
shaders/: main.frag  main.vert
src/: app.cpp  commands.cpp  device.cpp  engine.cpp  framebuffer.cpp  instance.cpp  logging.cpp  memory.cpp  mesh.cpp  pipeline.cpp  scene.cpp  shaders.cpp  swapchain.cpp  sync.cpp  triangle_mesh.cpp  window.cpp
